Changed ScrollBar to fix

--- a/src/components/Layout/SideBar/SideBar.module.css
+++ b/src/components/Layout/SideBar/SideBar.module.css
@@ -1,49 +1,57 @@
-.sideBar{
-    width: 300px;
-    max-width: 300px;   
-    position: absolute;
-    top: 0px;
-    bottom: 0px;    
+.sideBar {
+    width           : 300px;
+    max-width       : 300px;
+    position        : fixed;
+    top             : 0px;
+    bottom          : 0px;
+    background-color: #121214;
+    z-index         : 9999;
+    display         : flex;
+    flex-direction  : column;
     height: 100vh;
-    background-color: #121214;     
-    z-index: 99;
-   display: flex;
-   flex-direction: column;
+   
+    overflow-y: auto;
 }
 
-.sideBar .sideBarWrapper{
-    position: relative;    
-    z-index: 9999;
-    height: 100%;
-    flex: 1;
-    display: flex;
+.sideBar .sideBarWrapper {
+    position   : relative;
+    height: 100vh;
+    flex       : 1;
+    display    : flex;
     align-items: flex-end;
+   
 }
 
 
-.sideBar .cartItems{
+.sideBar .cartItems {
     padding: .6rem 1.5rem;
 }
 
-.sideBar .totalPrice{
-    height: 40px;
-    width: 100%;
-    position: sticky;
-    bottom: -100px;
-    left: 0;
-    right: 0;
+.sideBar .totalPrice {
+    height          : 40px;
+    width           : 100%;
+    position        : sticky;
+    bottom          : -100px;
+    left            : 0;
+    right           : 0;
     background-color: #FF0DED !important;
-    color: #fff;
-    z-index: 9999;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: .8rem;
-    margin-top: 1rem;
+    color           : #fff;
+    z-index         : 9999;
+    display         : flex;
+    justify-content : center;
+    align-items     : center;
+    font-size       : .8rem;
+    margin-top      : 1rem;
 }
 
-.sideBar .cartSummary{
-    color: #fff;
+.sideBar .cartSummary {
+    color        : #fff;
     margin-bottom: .5rem;
-    text-align: center;
+    text-align   : center;
 }
+
+@media screen and (max-width: 500px) {
+    .sideBar .sideBarWrapper {
+        min-height: 63%;
+    }
+  }
