--- a/src/components/Shop/ProductsNav/ProductsNav.module.css
+++ b/src/components/Shop/ProductsNav/ProductsNav.module.css
@@ -16,7 +16,7 @@
 }
 
 .productsNav .productSearch {
-    width: 250px;
+    width: 200px;
 }
 
 .productsNav .productSort {
